# SpaceZilla-DTN-OVER-CFDP

./: .gitignore  README.md  __main__.py  controller.py  controller.py.save  lib.env  main.py  pyproject.toml  setup.sh  test_app.py
.github/workflows/: lint.yml
backend/: __init__.py  apply_plan.py  backend_facade.py  contact_plan.py  docker_backend.py  eid.py  fileQueue.py  pyion_adapter.py  rc_generator.py  session.py  startup_checks.py  test_backend.py  transfer_backend.py
context/: ultraplan.md
docker/: ion_server.py  node2.rc  pyion_v414a2.dockerfile  receiver.rc
docker/nodes/: Dockerfile  docker-compose.yml
docker_implementation/: .gitignore  README.md  README_docker.md  controller.py  main.py  pyproject.toml
docker_implementation/backend/: __init__.py  container_agent.py  docker_backend.py  rc_generator.py  transfer_backend.py  zmq_controller.py
docker_implementation/docker/: CONTRIBUTING_docker.md  pyion_v414a2.dockerfile
docker_implementation/docs/: SDDandSRD.md
docker_implementation/frontend/: __init__.py  main_window_ver1.py
docker_implementation/runtime_logger/: logger.py
docker_implementation/store/: __init__.py  globals.py  models.py
docker_implementation/tests/: conftest.py  test_docker_backend_integration.py  test_host_mount.py  test_ipc_roundtrip.py  test_ipc_server_client.py  test_path_map.py  test_store.py  test_transfer_e2e.py
docs/: CONTRIBUTING.md
frontend/: NodePickerDialog.ui  Theme.ui  Theme_ui.py  __init__.py  contact_button_mapping.py  functions.py  node_picker.py  queue_button_mapping.py  test_controller.py  test_frontend.py  test_ui.py
frontend/SpaceZilla_ver0/: ReadMe.txt  (+17 more)
runtime_logger/: __init__.py  parser.py
scripts/: receiver_setup.py  test_backend.py
store/: __init__.py  globals.py  models.py  nodes.py  paths.py  rc_fields.py
tests/: conftest.py  test_node_picker.py  test_store.py
(+36 files in other folders)
