[project]
name = "spacezilla-dtn-over-cfdp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "platformdirs>=4.9.4",
    "pyion>=0.2.dev0",
    "pyside6>=6.11.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["backend", "scripts", "tests", "runtime_logger"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
